--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <form action="">
       <!--Add HTML here-->
+      <input type="text"></input>
+      <input type="submit"></input>
     </form>
 
 
