Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <form action="">
       <!--Add HTML here-->
-      <input type="text"></input>
-      <input type="submit"></input>
+      <input type="text">
+      <input type="submit">
     </form>
 
 
