Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form action="">
       <!--Add HTML here-->
       <input type="text">
-      <input type="submit">
+      <input id="button" type="submit">
     </form>
 
 
