Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <form action="">
       <!--Add HTML here-->
-      <input type="text">
+      <input id="input" type="text">
       <input id="button" type="submit">
     </form>
 
