Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="styles/index.css">
   <title>Password Generator</title>
+  <script defer src="index.js"></script>
 </head>
 <body>
   
